--- a/PRACTICAS EN CLASE/package.json
+++ b/PRACTICAS EN CLASE/package.json
@@ -5,8 +5,11 @@
   "main": "clase_3.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "nodemon serverExpress.js"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "express": "^4.17.1"
+  }
 }
