--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "entrega_4",
   "version": "1.0.0",
   "description": "",
-  "main": "./js/server.js",
+  "main": "./js/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon server.js"
@@ -10,7 +10,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "type": "module",
-    "express": "^4.17.1"
+    "ejs": "^3.1.6",
+    "express": "^4.17.1",
+    "type": "module"
   }
 }
