--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "entrega_4",
-  "version": "1.0.0",
+  "name": "primera_entrega",
+  "version": "2.0.0",
   "description": "",
   "main": "./js/index.js",
   "scripts": {
