--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
   "dependencies": {
     "express": "^4.17.1",
     "express-handlebars": "^5.3.4",
-    "socket.io": "^4.3.1"
+    "knex": "^0.95.14",
+    "mysql": "^2.18.1",
+    "socket.io": "^4.3.1",
+    "sqlite3": "^5.0.2"
   }
 }
