Cambia punto de entrada

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "name": "segunda_entrega",
   "version": "1.0.0",
   "description": "Segunda Entrega",
-  "main": "index.js",
+  "main": "main.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
